[package]
name = "firecracker-fuzz"
version = "0.1.0"
authors = ["George Mocanu <mocanu.geo98@gmail.com>"]
edition = "2018"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[package.metadata]
cargo-fuzz = true

[features]
afl_fuzz = ["afl"]
honggfuzz_fuzz = ["honggfuzz"]
libfuzzer_fuzz = ["libfuzzer-sys"]
stdin_fuzz = []

[dependencies]
afl = { version = "0.7.0", optional = true, features = ["reset_lazy_static"] }
honggfuzz = { version = "0.5", optional = true }
libfuzzer-sys = { version = "0.3", optional = true }
devices = { path = "../src/devices", features = ["fuzz_target"] }
api_server = { path = "../src/api_server", features = ["fuzz_target"] }

[patch.crates-io]
lazy_static = { git = "https://github.com/rust-fuzz/resettable-lazy-static.rs" }

[[bin]]
name = "block_fuzz_target"
path = "src/block_fuzz_target.rs"

[[bin]]
name = "net_fuzz_target"
path = "src/net_fuzz_target.rs"

[[bin]]
name = "vsock_fuzz_target"
path = "src/vsock_fuzz_target.rs"

[[bin]]
name = "api_server_fuzz_target"
path = "src/api_server_fuzz_target.rs"
